# SynthLauncher

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
crates/sl-core/: Cargo.toml
crates/sl-core/src/: installations.rs  lib.rs
crates/sl-core/src/auth/: mod.rs
crates/sl-core/src/config/: config.rs  mod.rs
crates/sl-core/src/json/: client.rs  manifest.rs
crates/sl-frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
crates/sl-frontend/src/: App.css  App.tsx
crates/sl-frontend/src-tauri/: Cargo.toml  tauri.conf.json
crates/sl-frontend/src-tauri/capabilities/: default.json
crates/sl-frontend/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/sl-frontend/src/components/: CreateInstanceDialog.tsx  InstanceCard.tsx
crates/sl-frontend/src/components/layout/: Navbar.tsx  ProfileSidebar.tsx  Sidebar.tsx
crates/sl-frontend/src/components/ui/: button.tsx  dialog.tsx  select.tsx
crates/sl-frontend/src/lib/: commands.ts  types.ts
crates/sl-frontend/src/pages/: HomePage.tsx  InstancesPage.tsx
crates/sl-java-manager/: Cargo.toml
crates/sl-java-manager/src/: lib.rs
crates/sl-java-manager/src/installer/: env.rs  extracter.rs  installer.rs  mod.rs
crates/sl-meta/: Cargo.toml
crates/sl-meta/src/: lib.rs
crates/sl-meta/src/json/: mod.rs  vanilla.rs  version_manifest.rs
crates/sl-meta/src/json/fabric/: mod.rs  profile.rs  versions.rs
crates/sl-mod-manager/: Cargo.toml
crates/sl-mod-manager/src/: modrinth.rs
crates/sl-omniarchive/: Cargo.toml
crates/sl-omniarchive/src/: entry.rs  lib.rs
crates/sl-utils/: Cargo.toml
crates/sl-utils/src/utils/: download.rs  errors.rs  mod.rs  platform.rs  zip.rs
src/: cli.rs  main.rs
