[package]
name = "sl-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sl-meta = { path = "../sl-meta" }
sl-utils = { path = "../sl-utils" }
sl-java-manager = { path = "../sl-java-manager" }
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.11.1"
lazy_static = "1.5.0"
bytes = "1.10.1"
reqwest = { version = "0.12.14", features = ["blocking", "json"]}
tokio = { version = "1.44.1", features = ["full"] }
serde_json = "1.0.140"
sha1 = "0.10.6"
futures = "0.3.31"
velcro = "0.5.4"
cfg-if = "1.0.0"
chrono = "0.4.41"
thiserror = "2.0.12"
once_cell = "1.21.3"
