[package]
name = "sl-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
zip = "2.5.0"
regex = "1.11.1"
bytes = "1.10.1"
dirs = "6.0.0"
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"